--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+aniso8601==2.0.0
+certifi==2018.1.18
+chardet==3.0.4
 click==6.7
 Flask==0.12.2
+Flask-RESTful==0.3.6
+Flask-Uploads==0.2.1
+idna==2.6
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2==2.10
+jsonpickle==0.9.5
 MarkupSafe==1.0
-Werkzeug==0.12.2
+numpy==1.14.0
+opencv-python==3.4.0.12
+pytz==2017.3
+requests==2.18.4
+six==1.11.0
+urllib3==1.22
+Werkzeug==0.14.1
